# havoc.cc

./: .clang-format  CMakeLists.txt  Makefile  inject.sh
src/: Main.cc  Settings.h
src/Core/: Dylib.cc  Dylib.h  Hooks.cc  Hooks.h  Interfaces.cc  Interfaces.h  Memory.h  NetVars.cc  NetVars.h
src/GUI/: GUI.cc  GUI.h  SDL.cc
src/Hacks/: Aimbot.cc  Aimbot.h  AntiAim.cc  AntiAim.h  AutoStrafe.cc  AutoStrafe.h  AutoWall.cc  AutoWall.h  Bhop.cc  Bhop.h  Chams.cc  Chams.h  Glow.cc  Glow.h  Skins.cc  Skins.h
src/SDK/: CCSGOAnimState.h  CCSWeaponInfo.h  CClientClass.h  CColor.h  CEntity.cc  CEntity.h  CGlobalVars.h  CItemDefs.h  CMatrix.h  CRecvTable.h  CSequences.h  CUserCmd.h  CUtlVector.h  CVector.h  HitGroup.h  HitGroups.h  IAppSystem.h  IBaseClientDLL.h  IClientEntityList.h  IClientMode.h  IDebugOverlay.h  IEngineClient.h  IEngineTrace.h  IEngineVGui.h  IGameMovement.h  IGlobalVars.h  IGlowManager.h  IInputSystem.h  IMaterialSystem.h  IModelInfo.h  IPanel.h  IPhysicsSurfaceProps.h  IPrediction.h  ISpatialQuery.h  IStudioRender.h  ISurface.h  IVDebugOverlay.h  IVEngineClient.h  IVModelInfo.h  IVPanel.h
src/UI/: Keys.cc  Keys.h
src/Util/: Math.cc  Math.h  Rand.h  Time.h  TypeTraits.h
